Fix selection color and scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,13 @@
     @apply bg-background text-foreground;
   }
 }
+
+::selection {
+  background: rgba(170, 170, 170, 0.3);
+}
+
+::-webkit-scrollbar {
+  display: none;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
